@@ -10,6 +10,7 @@ Enhancements:
 
 Fixes:
 
+* Fix contact create with birthdate age 0
 * Fix contact link create on job queue
 * Fix /settings/dav route
 * Fix display relationship without a ofContact property
